update a broken link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p>On October 27, hundreds of people will converge on downtown San Francisco to compete in 2018 freeCodeCamp JAMstack Hackathon.</p>
         <p class="negative-15">You should come, too!</p>
         <p class="negative-15">And don't worry if you can't make it to San Francisco - we'll have an online version of the hackathon with its own set of prizes.</p>
-        <p class="negative-15">freeCodeCamp is hosting the event in partnership with Netlify, as a part of <a href=" jamstackconf.com" target="_blank">JAMstack_conf 2018.</p>
+        <p class="negative-15">freeCodeCamp is hosting the event in partnership with Netlify, as a part of <a href="https://jamstackconf.com" target="_blank">JAMstack_conf 2018</a>.</p>
         <p class="negative-15">And yes - the hackathon is completely free.</p>
         <h3>What is a hackathon?</h3>
         <p class="negative-15">A hackathon is an event where people join teams and code together, then show off the projects they built. They usually only last one or two days, and often involve judging and prizes.</p>
