fix mistyped bash command

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
         <p>On October 27, hundreds of people will converge on downtown San Francisco to compete in 2018 freeCodeCamp JAMstack Hackathon.</p>
         <p class="negative-15">You should come, too!</p>
         <p class="negative-15">And don't worry if you can't make it to San Francisco - we'll have an online version of the hackathon with its own set of prizes.</p>
-        <p class="negative-15">freeCodeCamp is hosting the event in partnership with Netlify, as a part of <a href="https://jamstackconf.com" target="_blank">JAMstack_conf 2018</a>.</p>
-        <p class="negative-15">And yes - the hackathon is completely free.</p>
+        <p class="negative-15">freeCodeCamp is hosting the event in partnership with Netlify, as a part of <a href="https://jamstackconf.com" target="_blank">JAMstack_conf 2018</a>. And yes - the hackathon is completely free. (If you want to attend the conference as well, you can use the promo code freecodecamp100 for $100 off conference tickets.)</p>
         <h3>What is a hackathon?</h3>
         <p class="negative-15">A hackathon is an event where people join teams and code together, then show off the projects they built. They usually only last one or two days, and often involve judging and prizes.</p>
         <p class="negative-15">The JAMstack is a simple way of building web apps. JAM stands for JavaScript, APIs, and Markup (HTML and CSS). </p>
@@ -136,7 +135,7 @@
         <p class="negative-15">You can download and install VS Code here. You can use any code editor you want, but this is a popular free one.</p>
         <h3>Step #4: Install Gatsby.js</h3>
         <p class="negative-15">Open your terminal (which may be called a shell in your operating system) and type the following command:</p>
-        <p class="negative-15">sudo npm install - global gatsby-cli</p>
+        <p class="negative-15">sudo npm install --global gatsby-cli</p>
         <p class="negative-15">You'll need to enter your system password, which should be the same password you use to unlock your computer from sleep mode.</p>
         <h3>Step #5: Create your JAMstack "hello world" app using Gatsby</h3>
         <p class="negative-15">Run the following command:</p>
