--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p class="negative-15">The main difference between the JAMstack and other web development stacks like LAMP and MEAN is this: instead of using a web server back end, you use APIs.</p>
         <h3>Is this event for me?</h3>
         <p class="negative-15">If you want to make friends, build a project, and get in two solid days of coding practice, then yes - it's for you.</p>
-        <p class="negative-15">A photo from a recent React-focused hackathon held at GitHub. Photo by Real World React.We welcome people of all skill levels - even people who just started coding a few months ago. If you haven't been to a hackathon before, this would make a great first hackathon for you.</p>
+        <p class="negative-15">We welcome people of all skill levels - even people who just started coding a few months ago. If you haven't been to a hackathon before, this would make a great first hackathon for you.</p>
         <p class="negative-15">And there will be food. Lots of food.</p>
         <h3>How can a big event like this in downtown San Francisco be completely free?</h3>
         <p class="negative-15">Most hackathons have API sponsors who want to raise awareness of their APIs among developers. Many of these API sponsors will also have their own prizes for teams who make the best use of their APIs. They may also have developers at the event who can answer your questions about their API, and help you integrate it into your web app.</p>
