add hackathon images

--- a/index.html
+++ b/index.html
@@ -93,17 +93,21 @@
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
         <h2>freeCodeCamp is hosting a free hackathon at GitHub in San Francisco (and an online hackathon, too)</h1>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/2018-freeCodeCamp-JAMstack-hackathon.png">
-        <p>On October 27, hundreds of people will converge on downtown San Francisco to compete in 2018 freeCodeCamp JAMstack Hackathon.</p>
+        <p>On October 27, hundreds of people will converge on downtown San Francisco to compete in the 2018 freeCodeCamp JAMstack Hackathon.</p>
         <p class="negative-15">You should come, too!</p>
         <p class="negative-15">And don't worry if you can't make it to San Francisco - we'll have an online version of the hackathon with its own set of prizes.</p>
         <p class="negative-15">freeCodeCamp is hosting the event in partnership with Netlify, as a part of <a href="https://jamstackconf.com" target="_blank">JAMstack_conf 2018</a>. And yes - the hackathon is completely free. (If you want to attend the conference as well, you can use the promo code freecodecamp100 for $100 off conference tickets.)</p>
         <h3>What is a hackathon?</h3>
         <p class="negative-15">A hackathon is an event where people join teams and code together, then show off the projects they built. They usually only last one or two days, and often involve judging and prizes.</p>
+        <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-image-1.jpeg">
+        <caption>A photo from a recent React-focused hackathon held at GitHub. Photo by <a href="https://www.realworldreact.com/" target="_blank">Real World React</a>.</caption>
         <p class="negative-15">The JAMstack is a simple way of building web apps. JAM stands for JavaScript, APIs, and Markup (HTML and CSS). </p>
         <p class="negative-15">If you've built some of the projects in the freeCodeCamp curriculum, you've already been using the JAMstack. </p>
         <p class="negative-15">The main difference between the JAMstack and other web development stacks like LAMP and MEAN is this: instead of using a web server back end, you use APIs.</p>
         <h3>Is this event for me?</h3>
         <p class="negative-15">If you want to make friends, build a project, and get in two solid days of coding practice, then yes - it's for you.</p>
+        <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-image-2.jpeg">
+        <caption>A photo from a recent React-focused hackathon held at GitHub. Photo by <a href="https://www.realworldreact.com/" target="_blank">Real World React</a>.</caption>
         <p class="negative-15">We welcome people of all skill levels - even people who just started coding a few months ago. If you haven't been to a hackathon before, this would make a great first hackathon for you.</p>
         <p class="negative-15">And there will be food. Lots of food.</p>
         <h3>How can a big event like this in downtown San Francisco be completely free?</h3>
@@ -115,6 +119,8 @@
         <p class="negative-15">Online hackathon teams will compete for their own set of prizes. They can interact with the judges, mentors, and other hackathon teams through our chat room and our live stream of the event on the freeCodeCamp YouTube channel.</p>
         <h3>What about the San Francisco hackathon?</h3>
         <p class="negative-15">We'll start at 9 on Saturday morning on October 27 at GitHub's San Francisco headquarters (88 Colin P Kelly Jr Street). We'll code until 9 at night, then go home and get some sleep. Then we'll start again at 9 on Sunday morning, and finish up by 9 on Sunday night.</p>
+        <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-image-3.jpeg">
+        <caption>A photo from a recent React-focused hackathon held at GitHub. Photo by <a href="https://www.realworldreact.com/" target="_blank">Real World React</a>.</caption>
         <h2>How to get a free ticket</h2>
         <p class="negative-15">We want everyone to be ready to code as soon as the event starts. So in order to get a ticket for either the in-person or online hackathons, you need to take a few minutes to make sure your laptop is all set up right.</p>
         <p class="negative-15">The following tutorial will walk you through installing Git and Node.js, and deploying a "hello world" JAMstack app to the web.</p>
