add missing links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p class="negative-15">Of course! Send sponsorship inquiries to <a href="mailto:sponsors@jamstackconf.com">sponsors@jamstackconf.com</a></p>
         <h3>What about the Online hackathon?</h3>
         <p class="negative-15">Traveling to San Francisco can be expensive, and it can be a pain to get a US visa. So we're also hosting an online version of the 2018 freeCodeCamp JAMstack Hackathon. It will take place during the same days.</p>
-        <p class="negative-15">Online hackathon teams will compete for their own set of prizes. They can interact with the judges, mentors, and other hackathon teams through our chat room and our live stream of the event on the freeCodeCamp YouTube channel.</p>
+        <p class="negative-15">Online hackathon teams will compete for their own set of prizes. They can interact with the judges, mentors, and other hackathon teams through our chat room and our live stream of the event on <a href="https://youtube.com/freecodecamp" target="_blank">the freeCodeCamp YouTube channel</a>.</p>
         <h3>What about the San Francisco hackathon?</h3>
         <p class="negative-15">We'll start at 9 on Saturday morning on October 27 at GitHub's San Francisco headquarters (88 Colin P Kelly Jr Street). We'll code until 9 at night, then go home and get some sleep. Then we'll start again at 9 on Sunday morning, and finish up by 9 on Sunday night.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-image-3.jpeg">
@@ -130,15 +130,15 @@
         <p class="negative-15">We have a limited number of tickets and we expect the event to be full, so I recommend applying as soon as you can.</p>
         <h3>How to get your first JAMstack web app live</h3>
         <p class="negative-15">This tutorial will work on Mac, Linux, and Windows.</p>
-        <p class="negative-15">If you are using Windows I recommend using Windows' new Linux Bash Shell.</p>
+        <p class="negative-15">If you are using Windows I recommend using <a href="https://www.howtogeek.com/249966/how-to-install-and-use-the-linux-bash-shell-on-windows-10/" target="_blank">Windows' new Linux Bash Shell</a>.</p>
         <p class="negative-15">Note: when configuring all of these things on your computer, you may encounter issues related to your operating system. If you get stuck, read through <a href="https://forum.freecodecamp.org/t/221604" target="_blank">this forum thread</a> and if you are still stuck, ask for help by replying to the thread.</p>
         <h3>Step #1: Install Git</h3>
         <p class="negative-15">Git is a powerful version control tool that most major open source projects, including freeCodeCamp, use for collaborating on software. </p>
-        <p class="negative-15">You can download and install Git here.</p>
+        <p class="negative-15">You can download and <a href="https://git-scm.com/download" target="blank">install Git here</a>.</p>
         <h3>Step #2: Install npm, Node's package manager</h3>
-        <p class="negative-15">You can download and install npm here.</p>
+        <p class="negative-15">You can download and <a href="https://nodejs.org/en/">install npm here</a>.</p>
         <h3>Step #3: Install VS Code, Microsoft's open source code editor</h3>
-        <p class="negative-15">You can download and install VS Code here. You can use any code editor you want, but this is a popular free one.</p>
+        <p class="negative-15">You can download and <a href="https://code.visualstudio.com/download" target="_blank">install VS Code here</a>. You can use any code editor you want, but this is a popular free one.</p>
         <h3>Step #4: Install Gatsby.js</h3>
         <p class="negative-15">Open your terminal (which may be called a shell in your operating system) and type the following command:</p>
         <p class="negative-15">sudo npm install --global gatsby-cli</p>
@@ -163,7 +163,7 @@
         <p class="negative-15">And finally, commit those files to Git with the commit message "first commit":</p>
         <p class="negative-15"><code>git commit --message "first commit"</code></p>
         <h3>Step #9: Create a GitHub account</h3>
-        <p class="negative-15">You can create a free GitHub account in just a few minutes here. (Choose the "Unlimited public repositories" option).</p>
+        <p class="negative-15">You can <a href="https://github.com/join" target="_blank">create a free GitHub account in just a few minutes here</a>. (Choose the "Unlimited public repositories" option).</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-3.jpg">
         <p>Check your email inbox so you can verify your GitHub account.</p>
         <h3>Step #10: Add your SSH keys to GitHub. </h3>
@@ -173,7 +173,7 @@
         <p class="negative-15">The terminal will prompt you to choose a file location. Just press enter to accept the default file location. If the terminal tells you that you have already generated an SSH key in the past, press "n" so you don't overwrite your existing key.</p>
         <p class="negative-15">Then run this command in your terminal to copy your computer's public SSH key to your clipboard:</p>
         <p class="negative-15"><code>pbcopy < ~/.ssh/id_rsa.pub</code></p>
-        <p class="negative-15">Then click here to go to the SSH key settings page in GitHub and paste it in.</p>
+        <p class="negative-15">Then <a href="https://github.com/settings/ssh/new" target="_blank">click here to go to the SSH key settings page in GitHub</a> and paste it in.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-4.jpg">
         <h3>Step #11: Create a repository on GitHub</h3>
         <p class="negative-15">Follow this link to create a GitHub repository. You can name it whatever you want, and the description doesn't matter for our purposes. As long as you make this public, it's completely free.</p>
