minor fix to copy

--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
         <p class="negative-15">Then <a href="https://github.com/settings/ssh/new" target="_blank">click here to go to the SSH key settings page in GitHub</a> and paste it in.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-4.jpg">
         <h3>Step #11: Create a repository on GitHub</h3>
-        <p class="negative-15">Follow this link to create a GitHub repository. You can name it whatever you want, and the description doesn't matter for our purposes. As long as you make this public, it's completely free.</p>
+        <p class="negative-15"><a href="https://github.com/new" target="_blank">Follow this link to create a GitHub repository</a>. You can name it whatever you want, and the description doesn't matter for our purposes. As long as you make this public, it's completely free.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-5.jpg">        
         <h3>Step #12: Set your GitHub repository as your local Git project's origin and push your code to GitHub</h3>
         <p class="negative-15">Once you've completed Step #10, GitHub should send you to a page that looks like this, which has an option to push an existing repository from the command line.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-6.jpg">
         <p>You can click the clipboard button to copy the commands to your clipboard. Then go back to your terminal and make sure you're still in your project's directory. Then paste those commands into your terminal.</p>
         <h3>Step #13: Create a Netlify account</h3>
-        <p class="negative-15">Follow this link to go to Netlify's signup page. Then sign in using the GitHub account you just created.</p>
+        <p class="negative-15">Follow <a href="https://app.netlify.com/signup" target="_blank">this link to go to Netlify's signup page</a>. Then sign in using the GitHub account you just created.</p>
         <h3>Step #14: Create a Netlify app from your GitHub repository</h3>
-        <p class="negative-15">Now go here and choose GitHub as your Git provider.</p>
+        <p class="negative-15">Now <a href="https://app.netlify.com/start/repos" target="_blank">go here</a> and choose GitHub as your Git provider.</p>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/hackathon-article-image-7.jpg">
         <p>You should now see the GitHub repository you created a few minutes ago, and be able select it.</p>
         <p class="negative-15">Netlify's default configuration should be fine. So you can just scroll down and click the "deploy site" button.</p>
