add some code formatting to 2 more lines

--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
         <p class="negative-15">You can download and <a href="https://code.visualstudio.com/download" target="_blank">install VS Code here</a>. You can use any code editor you want, but this is a popular free one.</p>
         <h3>Step #4: Install Gatsby.js</h3>
         <p class="negative-15">Open your terminal (which may be called a shell in your operating system) and type the following command:</p>
-        <p class="negative-15">sudo npm install --global gatsby-cli</p>
+        <p class="negative-15"><code>sudo npm install --global gatsby-cli</code></p>
         <p class="negative-15">You'll need to enter your system password, which should be the same password you use to unlock your computer from sleep mode.</p>
         <h3>Step #5: Create your JAMstack "hello world" app using Gatsby</h3>
         <p class="negative-15">Run the following command:</p>
-        <p class="negative-15">gatsby new gatsby-site</p>
+        <p class="negative-15"><code>gatsby new gatsby-site</code></p>
         <h3>Step #6: Change to your app's directory and run it locally on your computer</h3>
         <p class="negative-15">Run the following command:</p>
         <p class="negative-15"><code>cd gatsby-site && gatsby develop</code></p>
