update hackathon image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
   <meta content="https://jamstack-hackathon.freecodecamp.com" property="og:url">
   <meta content="November 3 - 4 at GitHub in San Francisco: a giant free web development hackathon" property="og:description">
-  <meta content="https://s3.amazonaws.com/freecodecamp/freecodecamp-square-logo-large.jpg" property="og:image">
+  <meta content="https://s3.amazonaws.com/freecodecamp/2018-freeCodeCamp-JAMstack-hackathon.png" property="og:image">
   <meta content="article" property="og:type">
   <meta content="https://www.facebook.com/freecodecamp" property="article:publisher">
   <meta content="Responsive" property="article:section">
@@ -29,7 +29,7 @@
   <meta content="http://www.freecodecamp.com" name="twitter:url">
   <meta content="@freecodecamp" name="twitter:site">
   <meta content="summary_large_image" name="twitter:card">
-  <meta content="https://s3.amazonaws.com/freecodecamp/freecodecamp-square-logo-large.jpg" name="twitter:image:src">
+  <meta content="https://s3.amazonaws.com/freecodecamp/2018-freeCodeCamp-JAMstack-hackathon.png" name="twitter:image:src">
   <meta content="The 2018 freeCodeCamp JAMstack Hackathon" name="twitter:title">
   <meta content="November 3 - 4 at GitHub in San Francisco: a giant free web development hackathon" name="twitter:description">
   <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
