--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
         <h2>freeCodeCamp is hosting a free hackathon at GitHub in San Francisco (and an online hackathon, too)</h1>
         <img class="img-responsive" src="https://s3.amazonaws.com/freecodecamp/2018-freeCodeCamp-JAMstack-hackathon.png">
+        <p>NOTE: Tickets are now sold out and registration is closed. If you applied for a ticket by November 1, check your email inbox and you should have an email from Quincy Larson that links to your ticket.</p>
         <p>On November 3, hundreds of people will converge on downtown San Francisco to compete in the 2018 freeCodeCamp JAMstack Hackathon.</p>
         <p class="negative-15">You should come, too!</p>
         <p class="negative-15">And don't worry if you can't make it to San Francisco - we'll have an online version of the hackathon with its own set of prizes.</p>
